# APOD-Windows-Wallpaper

./: .gitignore  README.md  apod_wallpaper.conf  apod_wallpaper.conf.example  apod_wallpaper.py  init.bat  pyproject.toml  requirements-dev.txt  run-tests.ps1
.github/workflows/: python-app.yml
apod_wallpaper/: __init__.py  __main__.py  api_client.py  cli.py  config.py  wallpaper.py
tests/: __init__.py  test_api_client.py  test_config.py  test_proxy.py  test_wallpaper.py
